[metadata]
name = probabilistic
long_description = file: README.rst
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe = False
install_requires =
    numpy
tests_require =
    pytest
